<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_FC987E"
            android:gravity="center"
            android:padding="@dimen/dp_17"
            android:text="@string/this_is_an_orange_textview"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_CDEDD7"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_7BCCC6"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_7BCCC6"
            android:text="@string/this_is_a_button"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/paint_image"
            android:src="@drawable/paint" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            android:backgroundTint="@color/green_A2C89C"
            android:gravity="center"
            android:text="@string/this_is_a_green_button"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:background="@color/yellow_FBC962"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:autofillHints="@string/edit_this"
            android:hint="@string/this_is_an_edittext"
            android:inputType="textCapWords"
            android:textColor="@color/purple_700" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:autofillHints="@string/edit_this"
            android:hint="@string/this_is_a_new_edittext"
            android:inputType="textCapWords"
            android:textColor="@color/purple_700" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_7BCCC6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/notify_me"
                android:textSize="@dimen/sp_20" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auto_backup"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/purple_200" />

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/pink_FC4481"
            android:rating="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/purple_200" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>